[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Projectiles/Entities/hproj.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Mobs/Hvaisseau/hproj_0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Mobs/Hvaisseau/hproj_1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Mobs/Hvaisseau/hproj_app_4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Mobs/Hvaisseau/hproj_app_3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Mobs/Hvaisseau/hproj_app_2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Mobs/Hvaisseau/hproj_app_1.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 3 ) ],
"loop": true,
"name": "send",
"speed": 15.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "explode",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 3.93955

[sub_resource type="CircleShape2D" id=3]
radius = 4.55494

[node name="projen1" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 4
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="veg" type="CollisionShape2D" parent="."]
position = Vector2( 0.0267747, 0.056822 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="boulpos" type="Position2D" parent="."]
position = Vector2( 0.0417964, 0.0117511 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Timer2" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
